--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -111,6 +111,7 @@
     <Compile Include="FinancialAccount\FinancialAccountDetail.cs" />
     <Compile Include="FinancialAccount\FinancialAccountInfo.cs" />
     <Compile Include="FinancialAccount\FinancialAccountInfoFilter.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountQuery.cs" />
     <Compile Include="FinancialAccount\FinancialAccountSettings.cs" />
     <Compile Include="Package\Definition\PackageDefinitionFilter.cs" />
     <Compile Include="Package\IPackageFilter.cs" />
