--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -147,6 +147,7 @@
     <Compile Include="AccountViews\AccountInfo.cs" />
     <Compile Include="AccountViews\AccountPackages.cs" />
     <Compile Include="AccountViews\AccountHistoryView.cs" />
+    <Compile Include="AccountViews\FinancialAccounts.cs" />
     <Compile Include="PackageDefinitionExtendedSettings\PricingPackageDefinitionSettings.cs" />
     <Compile Include="PackageTypes\InvoiceRecurChargePackageDefinitionSettings.cs" />
     <Compile Include="PackageTypes\InvoiceRecurChargePackageSettings.cs" />
