--- a/BusinessProcess/Code/Vanrise.BusinessProcess.MainExtensions/Vanrise.BusinessProcess.MainExtensions.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.MainExtensions/Vanrise.BusinessProcess.MainExtensions.csproj
@@ -49,6 +49,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BPInstanceProgressViews\SimilarProcessesProgressView.cs" />
     <Compile Include="BPTaskAssigne\InitiatorBPTaskAssignee.cs" />
     <Compile Include="BPTaskAssigne\FixedUsersBPTaskAssignee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
