--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -113,6 +113,8 @@
     <Compile Include="FinancialAccount\FinancialAccountInfoFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountQuery.cs" />
     <Compile Include="FinancialAccount\FinancialAccountSettings.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountToEdit.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountToInsert.cs" />
     <Compile Include="Package\Definition\PackageDefinitionFilter.cs" />
     <Compile Include="Package\IPackageFilter.cs" />
     <Compile Include="ProductFamily\ProductFamily.cs" />
