Adding ProcessedCDRCostDataManager and IProcessedCDRCostDataManager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41069

--- a/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
+++ b/Retail/Code/Retail.Cost.Entities/Retail.Cost.Entities.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CDRCost\CDRCostBatchRequest.cs" />
+    <Compile Include="CDRCost\CDRCostRequest.cs" />
+    <Compile Include="CDRCost\CDRCostResponse.cs" />
+    <Compile Include="ProcessedCDRCost\ProcessedCDRCost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
