--- a/Retail/Code/Retail.Cost.Data.SQL/Retail.Cost.Data.SQL.csproj
+++ b/Retail/Code/Retail.Cost.Data.SQL/Retail.Cost.Data.SQL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72D1F349-FC2A-4F5E-BF3C-6FE371790137}</ProjectGuid>
+    <ProjectGuid>{CE3DB7E6-A8AF-4AB6-A83E-05E95CD6DE58}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Retail.Cost.Business</RootNamespace>
-    <AssemblyName>Retail.Cost.Business</AssemblyName>
+    <RootNamespace>Retail.Cost.Data.SQL</RootNamespace>
+    <AssemblyName>Retail.Cost.Data.SQL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -41,32 +41,19 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Entities">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.GenericData.QueueActivators">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.QueueActivators.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Integration.Entities">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Integration.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Queueing">
-      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Queueing.Entities">
-      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Entities.dll</HintPath>
+    <Reference Include="Vanrise.Data.SQL">
+      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Data.SQL.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CDRCostManager.cs" />
+    <Compile Include="ProcessedCDRCostDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueActivators\ApplyCostQueueActivator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Retail.Cost.Data\Retail.Cost.Data.csproj">
+      <Project>{2e3d5dc7-5e87-4196-bf49-168f5470a319}</Project>
+      <Name>Retail.Cost.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Retail.Cost.Entities\Retail.Cost.Entities.csproj">
       <Project>{84a54068-1858-4009-8687-5aab7e7b8901}</Project>
       <Name>Retail.Cost.Entities</Name>
