--- a/Retail/Code/Retail.Cost.Data/Retail.Cost.Data.csproj
+++ b/Retail/Code/Retail.Cost.Data/Retail.Cost.Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{72D1F349-FC2A-4F5E-BF3C-6FE371790137}</ProjectGuid>
+    <ProjectGuid>{2E3D5DC7-5E87-4196-BF49-168F5470A319}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Retail.Cost.Business</RootNamespace>
-    <AssemblyName>Retail.Cost.Business</AssemblyName>
+    <RootNamespace>Retail.Cost.Data</RootNamespace>
+    <AssemblyName>Retail.Cost.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -41,30 +41,11 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Entities">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.GenericData.QueueActivators">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.GenericData.QueueActivators.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Integration.Entities">
-      <HintPath>..\..\..\Vanrise\Code\Output\Vanrise.Integration.Entities.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Queueing">
-      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.dll</HintPath>
-    </Reference>
-    <Reference Include="Vanrise.Queueing.Entities">
-      <HintPath>..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.Entities.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CDRCostManager.cs" />
+    <Compile Include="IDataManager.cs" />
+    <Compile Include="IProcessedCDRCostDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueActivators\ApplyCostQueueActivator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Retail.Cost.Entities\Retail.Cost.Entities.csproj">
