Implementing financial accounts
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41073

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -148,6 +148,8 @@
     <Compile Include="AccountViews\AccountPackages.cs" />
     <Compile Include="AccountViews\AccountHistoryView.cs" />
     <Compile Include="AccountViews\FinancialAccounts.cs" />
+    <Compile Include="FinancialAccount\PostpaidFinancialAccount.cs" />
+    <Compile Include="FinancialAccount\PostpaidFinancialAccountDefinition.cs" />
     <Compile Include="PackageDefinitionExtendedSettings\PricingPackageDefinitionSettings.cs" />
     <Compile Include="PackageTypes\InvoiceRecurChargePackageDefinitionSettings.cs" />
     <Compile Include="PackageTypes\InvoiceRecurChargePackageSettings.cs" />
