--- a/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Entities/Retail.BusinessEntity.Entities.csproj
@@ -105,6 +105,7 @@
     <Compile Include="FinancialAccount\FinancialAccount.cs" />
     <Compile Include="FinancialAccount\FinancialAccountData.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinition.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountDefinitionConfig.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinitionInfo.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinitionInfoFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountDefinitionSettings.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="FinancialAccount\FinancialAccountInfo.cs" />
     <Compile Include="FinancialAccount\FinancialAccountInfoFilter.cs" />
     <Compile Include="FinancialAccount\FinancialAccountQuery.cs" />
+    <Compile Include="FinancialAccount\FinancialAccountRuntimeEditor.cs" />
     <Compile Include="FinancialAccount\FinancialAccountSettings.cs" />
     <Compile Include="FinancialAccount\FinancialAccountToEdit.cs" />
     <Compile Include="FinancialAccount\FinancialAccountToInsert.cs" />
