--- a/Mediation/Code/Mediation.Runtime/App.config
+++ b/Mediation/Code/Mediation.Runtime/App.config
@@ -83,26 +83,37 @@
 
   <!-- BEGIN CUSTOMER VARYING SECTION -->
   <appSettings file="appSettings.config">
-    <add key="TABS License" value="BF-2F-B4-CD-36-CB-1D-4B-8F-55-1C-F4-99-CD-1B-E8::==QMwkDM5EDMyYjM4ADNxAjM:kVGdwlncj5WR09mT"/>
-    <add key="Mediation_GenericRecord_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
-    <add key="Mediation_GenericConfig_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
+    <add key="IsRuntimeService" value="true"/>
+    <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString" />
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+    <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey"                             value="TransactionDBConnString"/>
+
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
+
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="Mediation_GenericConfig_DBConnString" />
+    <add key="ConfigurationDBConnStringKey"                     value="Mediation_GenericConfig_DBConnString" />
+    <add key="BusinessProcessConfigDBConnStringKey"             value="Mediation_GenericConfig_DBConnString" />
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
+    <add key="RulesDBConnStringKey"                             value="Mediation_GenericConfig_DBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-    <add key="BusinessProcessConfigDBConnStringKey" value="Mediation_GenericConfig_DBConnString"/>
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
-    <add key="ConfigurationDBConnStringKey" value="Mediation_GenericConfig_DBConnString"/>
+
+    <add key="Mediation_GenericRecord_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
+    <add key="Mediation_GenericConfig_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
+
     <add key="BCPDonotDeleteFiles" value="false"/>
-    <add key="BCPTempFilesDirectory" value="C:\BCPFiles" />
     <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
-    <add key="IsRuntimeService" value="false"/>
+
     <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
   </appSettings>
   <system.codedom>
     <compilers>
