--- a/Mediation/Code/Mediation.Web/Web.config
+++ b/Mediation/Code/Mediation.Web/Web.config
@@ -33,36 +33,42 @@
     <add name="QueueItemDBConnString" connectionString="Data Source=.;Initial Catalog=Mediation_Dev_Queueing;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
   <appSettings file="appSettings.config">
-
     <add key="Web_ExtendedModulesNames" value="VR_DataParser"/>
+    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
+    <add key="TempPasswordValidity" value="24:00:00"/>
 
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
-    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
 
-    <add key="Mediation_GenericRecord_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
-    <add key="Mediation_GenericConfig_DBConnStringKey" value="Mediation_GenericRecord_DBConnString"/>
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString" />
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+    <add key="IntegrationConnStringKey"                         value="TransactionDBConnString"/>
+    <add key="QueueDBConnStringKey"                             value="TransactionDBConnString"/>
+
+    <add key="QueueItemDBConnStringKey"                         value="QueueItemDBConnString"/>
+
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString"/>
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="Mediation_GenericConfig_DBConnString" />
+    <add key="ConfigurationDBConnStringKey"                     value="Mediation_GenericConfig_DBConnString" />
+    <add key="BusinessProcessConfigDBConnStringKey"             value="Mediation_GenericConfig_DBConnString" />
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="QueueingConfigDBConnStringKey"                    value="ConfigurationDBConnString"/>
+    <add key="RulesDBConnStringKey"                             value="Mediation_GenericConfig_DBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-    <add key="SecurityDBConnStringKey" value="Mediation_GenericConfig_DBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="Mediation_GenericConfig_DBConnString" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
-    <add key="BusinessProcessConfigDBConnStringKey" value="Mediation_GenericConfig_DBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="RulesDBConnStringKey" value="Mediation_GenericConfig_DBConnString"/>
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="QueueItemDBConnStringKey" value="QueueItemDBConnString"/>
-    <add key="TempPasswordValidity" value="24:00:00"/>
 
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="QueueingConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="Mediation_GenericRecord_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
+    <add key="Mediation_GenericConfig_DBConnStringKey"          value="Mediation_GenericRecord_DBConnString"/>
+
+    <add key="BCPDonotDeleteFiles" value="false"/>
+    <add key="BusinessProcess_ActivityEventsTracking" value="false"/>
 
     <add key="ExposedConnectionStringNames" value="Mediation_GenericRecord_DBConnString"/>
   </appSettings>
