--- a/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
@@ -71,6 +71,8 @@
     <Compile Include="DynamicTypeGenerator.cs" />
     <Compile Include="GetDimensionValueContext.cs" />
     <Compile Include="GetMeasureValueContext.cs" />
+    <Compile Include="MemoryAnalyticDataProvider\MemoryAnalyticDataManager.cs" />
+    <Compile Include="MemoryAnalyticDataProvider\MemoryAnalyticDataProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StyleRuleConditionContext.cs" />
   </ItemGroup>
