--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -139,6 +139,8 @@
     <Compile Include="AccountChargeEvaluators\FixedChargeAccountRecurringChargeEvaluator.cs" />
     <Compile Include="AccountConditions\FinancialAccountCondition.cs" />
     <Compile Include="AccountConditions\SubAccountCondition.cs" />
+    <Compile Include="AccountParts\AccountPartOperatorSetting.cs" />
+    <Compile Include="AccountParts\AccountPartOperatorSettingDefinition.cs" />
     <Compile Include="AccountRecurringChargeRuleSets\ApplyFirstAccountRecurringChargeRuleSetSettings.cs" />
     <Compile Include="AccountRecurringChargeRuleSets\SingleRuleAccountRecurringChargeRuleSetSettings.cs" />
     <Compile Include="AccountSynchronizerInsertHandlers\AssignProductAndPackagesAccountInsertHandler.cs" />
