--- a/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
+++ b/Retail/Code/Retail.Zajil.Web/Retail.Zajil.Web.csproj
@@ -122,6 +122,8 @@
     <Content Include="Retail_Zajil\Directives\MainExtensions\Account\Templates\AccountConvertorEditor.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\DID\retail-zajil-did-convertor-editor.js" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\DID\Templates\DIDConvertorEditor.html" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\InvoiceGPInfo\retail-zajil-invoicegpinfo-convertor-editor.js" />
+    <Content Include="Retail_Zajil\Directives\MainExtensions\InvoiceGPInfo\Templates\InvoiceGPInfoTemplate.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\retail-zajil-payment-convertor-editor.js" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\Payment\Templates\PaymentConvertorEditor.html" />
     <Content Include="Retail_Zajil\Directives\MainExtensions\ZajilInvoiceSettings\retail-invoice-invoicetype-zajilsubscriberinvoicesettings.js" />
