Invoice Synchronizer, Update Invoice Manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41127

--- a/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Web/Vanrise.Invoice.Web.csproj
@@ -211,8 +211,10 @@
     <Content Include="VR_Invoice\Directives\BillingCycle\vr-invoice-startdatecalculationmethod.js" />
     <Content Include="VR_Invoice\Directives\Extensions\Invoice\Templates\InvoiceConvertorTemplate.html" />
     <Content Include="VR_Invoice\Directives\Extensions\Invoice\Templates\InvoiceSourceReaderTemplate.html" />
+    <Content Include="VR_Invoice\Directives\Extensions\Invoice\Templates\InvoiceSynchronizerTemplate.html" />
     <Content Include="VR_Invoice\Directives\Extensions\Invoice\vr-invoice-convertor-editor.js" />
     <Content Include="VR_Invoice\Directives\Extensions\Invoice\vr-invoice-reader-directive.js" />
+    <Content Include="VR_Invoice\Directives\Extensions\Invoice\vr-invoice-synchronizer-editor.js" />
     <Content Include="VR_Invoice\Directives\Extensions\VRObjectTypes\vr-invoice-invoicefieldpropertyevaluator.js" />
     <Content Include="VR_Invoice\Directives\Extensions\VRObjectTypes\vr-invoice-invoiceobjecttype.js" />
     <Content Include="VR_Invoice\Directives\InvoiceSetting\MainExtensions\Templates\InitialSequenceValuePartTemplate.html" />
