--- a/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
+++ b/Vanrise/Code/Vanrise.Invoice.Business/Vanrise.Invoice.Business.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Context\RDLCReportParameterValueContext.cs" />
     <Compile Include="Context\StartDateCalculationMethodContext.cs" />
     <Compile Include="Extensions\InvoiceItemSubSection.cs" />
+    <Compile Include="Extensions\InvoiceSynchronizer.cs" />
     <Compile Include="Extensions\InvoiceTypeExtendedSettingsInfoContext.cs" />
     <Compile Include="InvoiceItemGroupingManager.cs" />
     <Compile Include="InvoiceItemManager.cs" />
@@ -81,6 +82,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Vanrise.BEBridge.Entities\Vanrise.BEBridge.Entities.csproj">
+      <Project>{9e370ac3-9718-4e10-ab12-b71605880d67}</Project>
+      <Name>Vanrise.BEBridge.Entities</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Caching\Vanrise.Caching.csproj">
       <Project>{c00d0633-b945-4edb-8348-5c91aaac19c7}</Project>
       <Name>Vanrise.Caching</Name>
