implementation of overridden configuration in BE definition and generic rule definition
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41129

--- a/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
+++ b/Vanrise/Code/Vanrise.Common.Business/Vanrise.Common.Business.csproj
@@ -75,6 +75,8 @@
     <Compile Include="GenericLKUP\GenericLKUPBEDefinitionSettings.cs" />
     <Compile Include="GenericLKUP\GenericLKUPDefinitionManager.cs" />
     <Compile Include="GenericLKUP\GenericLKUPManager.cs" />
+    <Compile Include="OverriddenConfigurationGroupManager.cs" />
+    <Compile Include="OverriddenConfiguration\OverriddenConfigurationManager.cs" />
     <Compile Include="StatusDefinitionFilterContext.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPManager.cs" />
     <Compile Include="VRActionAudit\VRActionAuditManager.cs" />
