--- a/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
+++ b/Vanrise/Code/Vanrise.Common.Data/Vanrise.Common.Data.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IGenericLKUPItemDataManager.cs" />
+    <Compile Include="IOverriddenConfigurationDataManager.cs" />
+    <Compile Include="IOverriddenConfigurationGroupDataManager.cs" />
     <Compile Include="IVRActionAuditDataManager.cs" />
     <Compile Include="IVRActionAuditLKUPDataManager.cs" />
     <Compile Include="IVRApplicationVisibilityDataManager.cs" />
